--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: "24.10.0-rc7"
+          - tag: "24.10.0"
             pkgarch: aarch64_generic
             target: rockchip
             subtarget: armv8
